# nangman-crypto-hypothesis-harness

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  sonar-project.properties
.github/workflows/: sonar.yml
ecs/: task-definition.example.json  task-role-policy.example.json
src/: args.rs  hash.rs  io.rs  main.rs  matching.rs  model.rs  output.rs  promotion_gate.rs  report.rs  run.rs  summary.rs  tests.rs  time.rs  verdict.rs
src/args/: help.rs  parse.rs  types.rs  validation.rs
src/args/parse/: finalize.rs  gate.rs  local.rs  pending.rs  s3.rs
src/io/: inputs.rs  json.rs  s3.rs
src/matching/: baseline.rs  metrics.rs  quality.rs  snapshot.rs  symbols.rs  types.rs
src/output/: keys.rs  local.rs  s3.rs  serialize.rs  tests.rs
src/promotion_gate/: manifest.rs  pressure.rs  refs.rs  selection.rs
src/run/: logging.rs  manifest_output.rs  result.rs
testdata/: hypothesis-state.sample.jsonl  market-feature-delta-summary.sample.json  market-feature-delta.sample.jsonl
