[package]
name = "hypothesis-harness-app"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.94"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
intel-candidate-app = { git = "https://github.com/nangman-infra/nangman-crypto-intel-candidate.git", rev = "d14666b86418360c7bcb89d67e70c55b54903009" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
