[package]
name = "hypothesis-harness-app"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.94"

[dependencies]
aws-config = "1.8.17"
aws-sdk-s3 = "1.133.0"
aws-types = "1.3.16"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
intel-candidate-app = { git = "https://github.com/nangman-infra/nangman-crypto-intel-candidate.git", rev = "5033c3ec9e9d885c57c6c47ca02c288d4f177107" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
