[package]
name = "hypothesis-harness-app"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.94"

[dependencies]
aws-config = { version = "1.8.17", default-features = false, features = ["behavior-version-latest", "default-https-client", "rt-tokio"] }
aws-sdk-s3 = { version = "1.133.0", default-features = false, features = ["default-https-client", "http-1x", "rt-tokio", "sigv4a"] }
aws-types = "1.3.16"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
intel-candidate-app = { git = "https://github.com/nangman-infra/nangman-crypto-intel-candidate.git", rev = "b56e5e0c386d64cd22ff5df1825f6fb298f87aab" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
